RESOLVED FIXED24088
ThreadableLoaderClient::didFailWillSendRequestCheck isn't wired up completely for workers and could use a better name.
https://bugs.webkit.org/show_bug.cgi?id=24088
Summary ThreadableLoaderClient::didFailWillSendRequestCheck isn't wired up completely...
David Levin
Reported 2009-02-23 01:39:20 PST
See summary.
Attachments
Proposed patch. (5.93 KB, patch)
2009-02-23 01:43 PST, David Levin
ap: review+
David Levin
Comment 1 2009-02-23 01:43:15 PST
Created attachment 27872 [details] Proposed patch.
Alexey Proskuryakov
Comment 2 2009-02-23 05:52:39 PST
Comment on attachment 27872 [details] Proposed patch. r=me
David Levin
Comment 3 2009-02-24 01:17:52 PST
Committed in r41157.
Note You need to log in before you can comment on or make changes to this bug.