2009-02-23  David Levin  <levin@chromium.org>

Reviewed by Alexey Proskuryakov.

        Bug 24088: ThreadableLoaderClient::didFailWillSendRequestCheck isn't wired up completely for workers and could use a better name.
        <https://bugs.webkit.org/show_bug.cgi?id=24088>

        No observable change in behavior, so no test.

        * loader/DocumentThreadableLoader.cpp:
        (WebCore::DocumentThreadableLoader::create):
        * loader/ThreadableLoaderClient.h:
        (WebCore::ThreadableLoaderClient::didFailRedirectCheck):
        * loader/ThreadableLoaderClientWrapper.h:
        (WebCore::ThreadableLoaderClientWrapper::didFailRedirectCheck):
        * loader/WorkerThreadableLoader.cpp:
        (WebCore::workerContextDidFailRedirectCheck):
        (WebCore::WorkerThreadableLoader::MainThreadBridge::didFailRedirectCheck):
        * loader/WorkerThreadableLoader.h:
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::didFinishLoading):
        * xml/XMLHttpRequest.h:

Canonical link: https://commits.webkit.org/33239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41157 268f45cc-cd09-0410-ab3c-d52691b4dbfc