WebCore/loader/DocumentThreadableLoader.cpp
@@ -82,7 +82,7 @@ void DocumentThreadableLoader::willSendRequest(SubresourceLoader*, ResourceReque
     // FIXME: This needs to be fixed to follow the redirect correctly even for cross-domain requests.
     if (!m_document->securityOrigin()->canRequest(request.url())) {
         RefPtr<DocumentThreadableLoader> protect(this);
-        m_client->didFailWillSendRequestCheck();
+        m_client->didFailRedirectCheck();
         cancel();
     }
 }
