WebCore/xml/XMLHttpRequest.cpp
@@ -1168,7 +1168,7 @@ void XMLHttpRequest::didFail(const ResourceError& error)
     networkError();
 }
 
-void XMLHttpRequest::didFailWillSendRequestCheck()
+void XMLHttpRequest::didFailRedirectCheck()
 {
     internalAbort();
     networkError();
