WebCore/xml/XMLHttpRequest.h
@@ -130,7 +130,7 @@ private:
     virtual void didReceiveData(const char* data, int lengthReceived);
     virtual void didFinishLoading(unsigned long identifier);
     virtual void didFail(const ResourceError&);
-    virtual void didFailWillSendRequestCheck();
+    virtual void didFailRedirectCheck();
     virtual void didReceiveAuthenticationCancellation(const ResourceResponse&);
 
     // Special versions for the preflight
